[package]
name = "cyberos-obs-collector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS observability collector — OTLP receiver + Loki/Prometheus/Tempo exporters (P0 module · FR-OBS-001..009)"

[lib]
name = "cyberos_obs_collector"
path = "src/lib.rs"

[[bin]]
name = "cyberos-obs"
path = "src/bin/cyberos_obs.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
sha2.workspace = true
jsonwebtoken.workspace = true
promql-parser = "0.4.3"

# OTel surface (slice-1 scaffold; the heavy lifting is the otelcol binary itself
# which we operate via Helm / docker-compose; this crate hosts the supervisor +
# tenant-isolation extension hook for FR-OBS-002).
prost = "0.13"
opentelemetry-proto = "0.27"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde_yaml = "0.9"
ed25519-dalek = "2.2"
tonic = { version = "0.12", features = ["transport"] }

cyberos-types.workspace = true

[dev-dependencies]
tempfile = "3.13"
