[package]
name = "cyberos-obs-compliance-view"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS obs-compliance-view - read-only compliance views over the memory audit chain (FR-OBS-008)"

[lib]
name = "cyberos_obs_compliance_view"
path = "src/lib.rs"

[dependencies]
# The pure core: the per-view audit-kind table, window validation, the Ed25519 chain-proof, and the
# defence-in-depth PII scan. Later slices add serde / axum / sqlx / a PDF lib for the HTTP shell.
ed25519-dalek = "2"
regex = "1"
jsonwebtoken.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
base64 = "0.22"
thiserror.workspace = true
# The read-only HTTP service (the four view endpoints): axum server, sqlx query over l1_audit_log.
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

[[bin]]
name = "obs-compliance-view"
path = "src/main.rs"

[[bin]]
name = "verify_manifest"
path = "src/bin/verify_manifest.rs"
