[package]
name = "cyberos-obs-proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS tenant-aware Grafana proxy - AST-injects tenant_id into PromQL/LogQL/TraceQL (FR-OBS-002)"

[lib]
name = "cyberos_obs_proxy"
path = "src/lib.rs"

[[bin]]
name = "obs-proxy"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
promql-parser = "0.4"
jsonwebtoken.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
form_urlencoded = "1"

[dev-dependencies]
proptest = "1"
