[package]
name = "cyberos-obs-router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS obs-router - Alertmanager -> CUO triage -> CHAT/PagerDuty routing (FR-OBS-007)"

[lib]
name = "cyberos_obs_router"
path = "src/lib.rs"

[dependencies]
# Slice 2 adds the webhook parser, dedup, and audit-row builders. Later slices add axum + reqwest for
# the HTTP shell and the CUO / CHAT / PagerDuty clients.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
