[package]
name = "cyberos-obs-router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS obs-router - Alertmanager -> CUO triage -> CHAT/PagerDuty routing (FR-OBS-007)"

[lib]
name = "cyberos_obs_router"
path = "src/lib.rs"

[[bin]]
name = "obs-router"
path = "src/main.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Optional memory-chain audit sink (FR-OBS-007 §1 #6): when DATABASE_URL is set the router appends
# obs.alert_triaged / obs.alert_acked rows to l1_audit_log; unset, it keeps the log sink.
sqlx.workspace = true
uuid.workspace = true
cyberos-audit-chain = { path = "../shared/cyberos-audit-chain" }
