[package]
name = "cyberos-proj"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PROJ module — Issue + Cycle + Engagement + RLS + FSM + memory audit emission (FR-PROJ-001 slice 1)"

[lib]
name = "cyberos_proj"
path = "src/lib.rs"

[dependencies]
tokio       = { workspace = true }
axum        = { workspace = true }
sqlx        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true, features = ["v4", "serde"] }
chrono      = { workspace = true, features = ["serde"] }
sha2        = { workspace = true }

cyberos-types  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
