[package]
name = "cyberos-brain-desktop"
version = "0.1.0"
edition = "2021"
description = "CyberOS BRAIN — Tauri 2.x desktop app (sync supervisor + tray + quick capture)"
license = "MIT OR Apache-2.0"
publish = false

# Tauri 2.x convention: a [lib] target for mobile + a [[bin]] entrypoint for desktop.
[lib]
name = "cyberos_brain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cyberos-brain-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Timestamps for quick-capture frontmatter.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Tenant resolution: HOME-relative paths.
dirs = "5"

[features]
# Default features keep the bundle lean; opt in to extras via tauri.conf.json.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
