[package]
name = "cyberos-desktop"
version = "1.0.6"
description = "CyberOS desktop - trigger CyberOS workflows and skills from your Mac"
authors = ["CyberSkill <info@cyberskill.world>"]
edition = "2021"
rust-version = "1.77"

# The Tauri app is a library (the desktop binary plus future mobile targets call `run()`).
[lib]
name = "cyberos_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The Rust backend makes the HTTP calls, so the webview never hits CORS - it talks only to Tauri commands.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# OS keychain (macOS Keychain; Windows Credential Manager / Linux Secret Service on the follow-on targets).
keyring = "3"

# Desktop-only: in-app auto-update of the installed shell. The plugin is registered and checks on launch
# (src/lib.rs); it stays a quiet no-op until tauri.conf.json gets a `plugins.updater` block with the signing
# pubkey + endpoint (RELEASE.md). Mobile updates ship through the stores, so this is scoped off iOS/Android.
# (The dependency table must use target_os, not the `desktop` cfg - Cargo does not know Tauri's `desktop` cfg
# at dependency-resolution time; the code gates still use `#[cfg(desktop)]`, which the build script sets.)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# Tauri's default custom-protocol for production builds.
custom-protocol = ["tauri/custom-protocol"]
# TASK-IMP-075: Mac App Store target. Compiles the self-updater OUT (registration + launch check
# are cfg-gated on not(feature = "mas") in src/lib.rs) - self-update is both an App Sandbox
# violation and an App Store policy rejection. Default builds are unchanged: no feature, no diff.
mas = []
