[package]
name = "cyberos-obs-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CyberOS shared observability SDK: RED request metrics, cardinality guard, OTel init, and axum instrumentation"

[lib]
name = "cyberos_obs_sdk"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
http.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
rand = "0.8"
sha2.workspace = true
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tonic = { version = "0.12", default-features = false }

cyberos-obs-sdk-macros = { path = "../cyberos-obs-sdk-macros" }

[dev-dependencies]
tokio.workspace = true
